@@ -10,7 +10,7 @@ import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 
 import playerquests.builder.gui.component.GUISlot;
-import playerquests.builder.gui.function.SelectBlock;
+import playerquests.builder.gui.function.SelectMaterial;
 import playerquests.builder.gui.function.UpdateScreen;
 import playerquests.client.ClientDirector;
 
@@ -27,7 +27,7 @@ public class Dynamicitemslist extends GUIDynamic {
     /**
      * The list of items.
      */
-    List<ItemStack> items = new ArrayList<ItemStack>();
+    List<ItemStack> items = new ArrayList<>();
 
     /**
      * The maximum number of items.
@@ -76,7 +76,7 @@ public class Dynamicitemslist extends GUIDynamic {
 
                 // go to the previous screen
                 new UpdateScreen(
-                    new ArrayList<>(Arrays.asList(this.previousScreen)), 
+                    Arrays.asList(this.previousScreen), 
                     director
                 ).execute();
             });
@@ -87,15 +87,16 @@ public class Dynamicitemslist extends GUIDynamic {
                 .setItem("LIME_DYE")
                 .setLabel("Add an item")
                 .onClick(() -> {
-                    new SelectBlock(
-                        new ArrayList<>(Arrays.asList(
+                    new SelectMaterial(
+                        Arrays.asList(
                             "Select or type a block", // the prompt message
-                            Arrays.asList(), // denied block strings (empty)
-                            Arrays.asList() // denied SelectMethods (empty)
-                        )), 
+                            List.of(), // denied block strings (empty)
+                            List.of(), // denied SelectMethods (empty)
+                            false // doesn't have to be a block
+                        ), 
                         director
                     ).onFinish((func) -> {
-                        SelectBlock function = (SelectBlock) func;
+                        SelectMaterial function = (SelectMaterial) func;
                         Material result = function.getResult();
 
                         // re-open the gui
@@ -108,7 +109,10 @@ public class Dynamicitemslist extends GUIDynamic {
 
                         // add the selected item to the list
                         this.addItem(new ItemStack(result));
-                    }).execute(); // run the select block function
+
+                        // show it added
+                        this.execute();
+                    }).execute(); // run the function
                 });
         }
 
@@ -145,7 +149,7 @@ public class Dynamicitemslist extends GUIDynamic {
 
                     // show the item editor
                     new UpdateScreen(
-                        new ArrayList<>(Arrays.asList("itemeditor")), director
+                        Arrays.asList("itemeditor"), director
                     ).onFinish(func -> {
                         UpdateScreen function = (UpdateScreen) func;
                         Dynamicitemeditor editor = (Dynamicitemeditor) function.getDynamicGUI();
@@ -155,28 +159,13 @@ public class Dynamicitemslist extends GUIDynamic {
                             // remove the item from our list
                             this.removeItem(i);
 
-                            // run actioneditor finish sequence (updates the quest, based on this list)
-                            this.onFinish.accept(this);
+                            // go back
+                            this.goBack(function);
                         });
 
-                        // after updating the amount..
-                        editor.onUpdate((v) -> {
-                            // go back when (should be to this itemlist screen)
-                            new UpdateScreen(
-                                new ArrayList<>(Arrays.asList(function.getPreviousScreen())), director
-                            ).onFinish((f) -> {
-                                // find the new/next instance
-                                UpdateScreen nextfunction = (UpdateScreen) f;
-                                Dynamicitemslist list = (Dynamicitemslist) nextfunction.getDynamicGUI();
-
-                                // migrate the onFinish code to the new instance
-                                list.onFinish(onFinish);
-                            }).execute();
-                            // ^ this works (despite being a completely fresh instance of the gui), because at the top
-                            // of this class, it pulls the list of items from the director. For safety it filters
-                            // out anything that isn't an ItemStack and then uses whatever is there as the item list.
-                            // This is issue prone, as it's not strictly the same data but it would mean data overflow
-                            // issues if it wasn't anyway.
+                        editor.onFinish((v) -> {
+                            // go back
+                            this.goBack(function);
                         });
                     }).execute();
                 });
@@ -186,12 +175,34 @@ public class Dynamicitemslist extends GUIDynamic {
     }
 
     /**
+     * Go back after item editor (should be to this itemlist screen).
+     * Aiming to preserve the onFinish function from the action editor.
+     * @param function
+     */
+    private void goBack(UpdateScreen function) {
+        new UpdateScreen(
+            new ArrayList<>(Arrays.asList(function.getPreviousScreen())), director
+        ).onFinish((f) -> {
+            // find the new/next instance
+            UpdateScreen nextfunction = (UpdateScreen) f;
+            Dynamicitemslist list = (Dynamicitemslist) nextfunction.getDynamicGUI();
+
+            // migrate the onFinish code to the new instance
+            list.onFinish(this.onFinish);
+        }).execute();
+        // ^ this works (despite being a completely fresh instance of the gui), because at the top
+        // of this class, it pulls the list of items from the director. For safety it filters
+        // out anything that isn't an ItemStack and then uses whatever is there as the item list.
+        // This is issue prone, as it's not strictly the same data but it would mean data overflow
+        // issues if it wasn't anyway.
+    }
+
+    /**
      * Completely overwrite the item list shown.
      * @param items the items (up to maxItems)
      */
     private void setItems(List<ItemStack> items) {
         this.items = items;
-        this.execute(); // update GUI
     }
 
     /**
@@ -200,7 +211,6 @@ public class Dynamicitemslist extends GUIDynamic {
      */
     private void addItem(ItemStack item) {
         this.items.add(item);
-        this.execute(); // update GUI
     }
 
     /**
@@ -208,8 +218,7 @@ public class Dynamicitemslist extends GUIDynamic {
      * @param item the item to remove
      */
     private void removeItem(ItemStack item) {
-        this.items.removeIf(it -> it.equals(item));
-        this.execute(); // update GUI
+        this.items.remove(item);
     }
 
     /**
